unpackaged/main/default/objects/Bundle_Plan__c/Bundle_Plan__c.object-meta.xml
<CustomObject>
    <description>Bundle Plans group products into a single bundle with an associated discount, and related product prices. They can be added to Opportunities to automate/smooth the selling process.</description>
    <label>Bundle Plan</label>
    <nameField>
        <label>Bundle Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundle Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>