unpackaged/main/default/objects/Bundle_Plan__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a bundle isn&#39;t active, it won&#39;t show in search lists.</description>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>