unpackaged/main/default/objects/Bundle_Plan__c/fields/Name_Unique__c.field-meta.xml
<CustomField>
    <fullName>Name_Unique__c</fullName>
    <description>Very annoyingly, salesforce doesn&#39;t let us define name as unique. This field combined with a simple trigger does the trick.</description>
    <label>Name (Unique)</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>