unpackaged/main/default/objects/Bundle_Plan__c/fields/Number_of_Other_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Other_Products__c</fullName>
    <label>Number of Other Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>