unpackaged/main/default/objects/Bundle_Plan__c/fields/Number_of_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Products__c</fullName>
    <label>Number of Products</label>
    <summaryForeignKey>Bundle_Product__c.Bundle_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>