unpackaged/main/default/objects/Bundle_Plan__c/fields/Number_of_Setup_Fee_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Setup_Fee_Products__c</fullName>
    <inlineHelpText>Calculated by trigger.</inlineHelpText>
    <label>Number of Setup Fee Products</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>