unpackaged/main/default/objects/Bundle_Plan__c/fields/Plan_availability__c.field-meta.xml
<CustomField>
    <fullName>Plan_availability__c</fullName>
    <label>Plan availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Sales</fullName>
            </value>
            <value>
                <fullName>Addendum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>