unpackaged/main/default/objects/Bundle_Plan__c/fields/Plan_Discount__c.field-meta.xml
<CustomField>
    <fullName>Plan_Discount__c</fullName>
    <inlineHelpText>By default, all product will be discounted by this amount. (This can be overridden after they have been added to the Opportunity)</inlineHelpText>
    <label>Plan Discount</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>