unpackaged/main/default/objects/Bundle_Plan__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Bundle Plans</relationshipLabel>
    <relationshipName>Bundle_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>