unpackaged/main/default/objects/Bundle_Plan__c/fields/Recurring_Item_Discount__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Item_Discount__c</fullName>
    <formula>1 - (Total_Discount_Price_of_Other_Products__c /  Total_List_Price_of_Other_Products__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Item Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>