unpackaged/main/default/objects/Bundle_Plan__c/fields/Total_Bundle_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Bundle_Discount__c</fullName>
    <formula>1 - (Total_Bundle_Discounted_Price__c / Total_Bundle_List_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual discount calculated on total list price.</inlineHelpText>
    <label>Total Bundle Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>