unpackaged/main/default/objects/Bundle_Plan__c/fields/Total_Bundle_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Bundle_List_Price__c</fullName>
    <label>Total Bundle List Price</label>
    <summarizedField>Bundle_Product__c.Standard_Price__c</summarizedField>
    <summaryForeignKey>Bundle_Product__c.Bundle_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>