unpackaged/main/default/objects/Bundle_Plan__c/fields/Total_Discount_Price_of_Other_Products__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Price_of_Other_Products__c</fullName>
    <description>Set in the Bundle Product Trigger Handler.</description>
    <inlineHelpText>Total of the Bundle Price of all associated products that do NOT hav Product Family of Setup Fee.</inlineHelpText>
    <label>Total Discount Price of Other Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>