unpackaged/main/default/objects/Bundle_Plan__c/fields/Total_Discount_Price_of_Setup_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Price_of_Setup_Fees__c</fullName>
    <description>Set in the Bundle Product Trigger Handler.</description>
    <inlineHelpText>Total of the default bundle price of all Bundle Products that have a Product Family of Setup Fee.</inlineHelpText>
    <label>Total Discount Price of Setup Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>