unpackaged/main/default/objects/Bundle_Plan__c/fields/Total_List_of_Setup_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_List_of_Setup_Fees__c</fullName>
    <label>Total List of Setup Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>