unpackaged/main/default/objects/Bundle_Plan__c/fields/Total_List_Price_of_Setup_Fee_Products__c.field-meta.xml
<CustomField>
    <fullName>Total_List_Price_of_Setup_Fee_Products__c</fullName>
    <inlineHelpText>Total of the list price of all Bundle Products that have a Product Family of Setup Fee.</inlineHelpText>
    <label>Total List Price of Setup Fee Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>