unpackaged/main/default/objects/Bundle_Plan__c/fields/Total_Minimum_Price_of_Other_Products__c.field-meta.xml
<CustomField>
    <fullName>Total_Minimum_Price_of_Other_Products__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Set in the Bundle Product Trigger Handler.</description>
    <inlineHelpText>Total of the Minimum Allows Price on the Bundle Product of all associated products that do NOT hav Product Family of Setup Fee.</inlineHelpText>
    <label>Total Minimum Price of Other Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>