unpackaged/main/default/objects/Bundle_Plan__c/fields/Total_Minimum_Price_of_Setup_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Minimum_Price_of_Setup_Fees__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Set in the Bundle Product Trigger Handler</description>
    <inlineHelpText>Total of the minimum price of all Bundle Products that have a Product Family of Setup Fee.</inlineHelpText>
    <label>Total Minimum Price of Setup Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>