unpackaged/main/default/objects/Bundle_Plan__c/validationRules/Active_Requires_Products.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Requires_Products</fullName>
    <active>true</active>
    <errorConditionFormula>isActive__c = true
 &amp;&amp;  Number_of_Products__c &lt; 2</errorConditionFormula>
    <errorDisplayField>isActive__c</errorDisplayField>
    <errorMessage>Bundles need to contain at least two products to be active.</errorMessage>
</ValidationRule>