unpackaged/main/default/objects/Bundle_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tier_Plan__c</columns>
    <columns>Total_Discount_Price_of_Setup_Fees__c</columns>
    <columns>Total_Discount_Price_of_Other_Products__c</columns>
    <columns>isActive__c</columns>
    <columns>Total_Minimum_Price_of_Other_Products__c</columns>
    <columns>Total_Minimum_Price_of_Setup_Fees__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>