unpackaged/main/default/objects/Bundle_Plan__c/listViews/Premier_Bundles.listView-meta.xml
<ListView>
    <fullName>Premier_Bundles</fullName>
    <columns>NAME</columns>
    <columns>Tier_Plan__c</columns>
    <columns>Total_Discount_Price_of_Setup_Fees__c</columns>
    <columns>Total_Discount_Price_of_Other_Products__c</columns>
    <columns>isActive__c</columns>
    <columns>Total_Minimum_Price_of_Other_Products__c</columns>
    <columns>Total_Minimum_Price_of_Setup_Fees__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Premier</value>
    </filters>
    <label>Premier Bundles</label>
</ListView>